--- a/about.html
+++ b/about.html
@@ -1,1 +1,83 @@
+{% extends 'base.html' %} {% block title %}About{% endblock %} {% block content
+%}
 
+<div class="row p-3">
+  <h3>What is RxNorm?</h3>
+  <p class="lead">
+    RxNorm is two things: a normalized naming system for generic and branded
+    drugs; and a tool for supporting semantic interoperation between drug
+    terminologies and pharmacy knowledge base systems. The National Library of
+    Medicine (NLM) produces RxNorm.
+  </p>
+</div>
+<div class="row p-3">
+  <h3>Purpose of RxNorm</h3>
+  <p class="lead">
+    Hospitals, pharmacies, and other organizations use computer systems to
+    record and process drug information. Because these systems use many
+    different sets of drug names, it can be difficult for one system to
+    communicate with another. To address this challenge, RxNorm provides
+    normalized names and unique identifiers for medicines and drugs. The goal of
+    RxNorm is to allow computer systems to communicate drug-related information
+    efficiently and unambiguously.
+  </p>
+</div>
+<div class="row p-3">
+  <h4>Links</h4>
+  <div class="col">
+    <li>
+      <a
+        href="https://lhncbc.nlm.nih.gov/RxNav/APIs/RxNormAPIs.html"
+        class="link-secondary"
+        target="_blank"
+        >RxNorm API Documentation</a
+      >
+    </li>
+    <li>
+      <a
+        href="https://www.nlm.nih.gov/databases/umls.html"
+        class="link-secondary"
+        target="_blank"
+        >Unified Medical Language System License</a
+      >
+    </li>
+    <li>
+      <a href="https://www.nlm.nih.gov/" class="link-secondary" target="_blank"
+        >National Library of Medicine</a
+      >
+    </li>
+  </div>
+  <div class="col">
+    <li>
+      <a
+        href="https://github.com/chrismannina/med-magic"
+        class="link-secondary"
+        target="_blank"
+        >GitHub</a
+      >
+    </li>
+    <li>
+      <a
+        href="https://flask.palletsprojects.com/en/2.1.x/"
+        class="link-secondary"
+        target="_blank"
+        >Flask Documentation</a
+      >
+    </li>
+    <li>
+      <a href="https://getbootstrap.com/" class="link-secondary" target="_blank"
+        >Bootstrap</a
+      >
+    </li>
+  </div>
+</div>
+<div class="row p-3">
+  <h5>Disclaimer</h5>
+  <p class="small">
+    This product uses publicly available data from the U.S. National Library of
+    Medicine (NLM), National Institutes of Health, Department of Health and
+    Human Services; NLM is not responsible for the product and does not endorse
+    or recommend this or any other product.
+  </p>
+</div>
+{% endblock %}
